--- a/Tokoku.html
+++ b/Tokoku.html
@@ -2,7 +2,7 @@
 <html lang="id" class="transition duration-300 scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Harga & Pemesanan - Rear OfficiaL</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -11,26 +11,32 @@
       theme: {
         extend: {
           fontFamily: {
-            futuristic: ['"Orbitron"', 'sans-serif']
+            modern: ['Poppins', 'sans-serif']
+          },
+          colors: {
+            cyberblue: '#0ff1fe',
+            darkgray: '#1a1a1a',
+            metallicgray: '#2e2e2e',
+            neoncyan: '#00fff7'
           },
           boxShadow: {
-            glow: '0 0 20px rgba(168, 85, 247, 0.6)'
+            neon: '0 0 12px #0ff1fe, 0 0 24px #00fff7'
           }
         }
       }
     }
   </script>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 </head>
-<body class="bg-gradient-to-br from-gray-50 to-purple-100 dark:from-gray-900 dark:to-gray-800 text-gray-800 dark:text-gray-100 transition duration-300 font-futuristic">
+<body class="bg-darkgray text-cyberblue font-modern transition duration-300">
 
   <!-- Header -->
-  <header class="bg-purple-700 text-white p-6 flex justify-between items-center shadow-lg">
+  <header class="bg-metallicgray text-cyberblue p-6 flex justify-between items-center shadow-neon">
     <div>
-      <h1 class="text-3xl font-bold tracking-wide">Rear OfficiaL</h1>
-      <p class="text-sm">Website Pemesanan Hosting Rear OfficiaL</p>
+      <h1 class="text-3xl font-semibold tracking-wide">Rear OfficiaL</h1>
+      <p class="text-sm text-neoncyan">Website Pemesanan Hosting Rear OfficiaL</p>
     </div>
-    <button onclick="toggleDarkMode()" class="bg-white text-purple-700 px-4 py-2 rounded-full hover:bg-purple-200 dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 transition-all duration-300 shadow-md">
+    <button onclick="toggleDarkMode()" class="border border-cyberblue px-4 py-2 rounded-md hover:bg-cyberblue hover:text-darkgray transition">
       switch to gelap/terang
     </button>
   </header>
@@ -38,11 +44,11 @@
   <!-- Kalkulator Harga -->
   <section class="py-16">
     <div class="container mx-auto max-w-xl px-4">
-      <div class="bg-white dark:bg-gray-800 p-6 rounded-xl shadow-glow border border-purple-500/30 backdrop-blur">
-        <h2 class="text-2xl font-bold text-purple-800 dark:text-purple-300 mb-6 text-center">Produk Rear OfficiaL</h2>
+      <div class="bg-metallicgray p-6 rounded-lg shadow-neon border border-cyberblue/40 backdrop-blur-sm">
+        <h2 class="text-2xl font-semibold mb-6 text-neoncyan text-center">Produk Rear OfficiaL</h2>
 
         <label for="jenisLayanan" class="block mb-1">Pilih layanan:</label>
-        <select id="jenisLayanan" class="w-full p-3 border rounded-lg bg-opacity-70 dark:bg-gray-900 dark:border-gray-700 dark:text-white mb-4" onchange="ubahForm(); hitungHarga()">
+        <select id="jenisLayanan" class="w-full p-3 border border-cyberblue rounded-md bg-darkgray text-cyberblue mb-4" onchange="ubahForm(); hitungHarga()">
           <option value="pt">PT Panel - Rp25.000 (selamanya)</option>
           <option value="admin">Admin Panel - Rp15.000 (selamanya)</option>
           <option value="reseller">Reseller Panel - Rp7.000 (selamanya)</option>
@@ -52,30 +58,30 @@
 
         <div id="durasiInput" class="mb-4 hidden">
           <label for="durasi" class="block mb-1">Jumlah Hari:</label>
-          <input type="number" id="durasi" class="w-full p-3 border rounded-lg dark:bg-gray-900 dark:border-gray-700 dark:text-white" oninput="hitungHarga()" />
+          <input type="number" id="durasi" class="w-full p-3 border border-cyberblue rounded-md bg-darkgray text-cyberblue" oninput="hitungHarga()" />
         </div>
 
         <div id="gbInput" class="mb-4 hidden">
           <label for="jumlahGB" class="block mb-1">Jumlah GB RAM:</label>
-          <input type="number" id="jumlahGB" class="w-full p-3 border rounded-lg dark:bg-gray-900 dark:border-gray-700 dark:text-white" oninput="hitungHarga()" />
+          <input type="number" id="jumlahGB" class="w-full p-3 border border-cyberblue rounded-md bg-darkgray text-cyberblue" oninput="hitungHarga()" />
         </div>
 
-        <p id="hasilHarga" class="mt-4 text-lg font-semibold text-purple-700 dark:text-purple-300 text-center"></p>
+        <p id="hasilHarga" class="mt-4 text-lg font-semibold text-neoncyan text-center"></p>
       </div>
     </div>
   </section>
 
   <!-- Form Pemesanan -->
-  <section class="py-16 bg-white dark:bg-gray-800 border-t dark:border-gray-700">
+  <section class="py-16 bg-darkgray border-t border-cyberblue/20">
     <div class="container mx-auto max-w-xl px-4">
-      <div class="bg-gradient-to-br from-purple-100 to-white dark:from-gray-800 dark:to-gray-900 p-6 rounded-xl shadow-glow">
-        <h2 class="text-2xl font-bold text-purple-800 dark:text-purple-300 mb-6 text-center">Form Pemesanan</h2>
+      <div class="bg-metallicgray p-6 rounded-lg shadow-neon border border-cyberblue/40">
+        <h2 class="text-2xl font-semibold mb-6 text-neoncyan text-center">Form Pemesanan</h2>
 
-        <input id="nama" type="text" placeholder="Nama Lengkap" class="w-full p-3 border rounded-lg mb-4 dark:bg-gray-900 dark:border-gray-700 dark:text-white" />
-        <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-3 border rounded-lg mb-4 dark:bg-gray-900 dark:border-gray-700 dark:text-white" />
-        <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-3 border rounded-lg mb-6 dark:bg-gray-900 dark:border-gray-700 dark:text-white"></textarea>
+        <input id="nama" type="text" placeholder="Nama Lengkap" class="w-full p-3 border border-cyberblue rounded-md mb-4 bg-darkgray text-cyberblue placeholder-cyberblue" />
+        <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-3 border border-cyberblue rounded-md mb-4 bg-darkgray text-cyberblue placeholder-cyberblue" />
+        <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-3 border border-cyberblue rounded-md mb-6 bg-darkgray text-cyberblue placeholder-cyberblue"></textarea>
 
-        <button onclick="kirimPesan()" class="w-full bg-gradient-to-r from-green-500 to-green-700 text-white py-3 rounded-full font-semibold hover:from-green-600 hover:to-green-800 transition-all duration-300 shadow-md">
+        <button onclick="kirimPesan()" class="w-full bg-cyberblue text-darkgray py-3 rounded-md font-semibold hover:bg-neoncyan transition">
           Tekan Untuk Pesan Produk!
         </button>
       </div>
@@ -83,38 +89,37 @@
   </section>
 
   <!-- Metode Pembayaran -->
-  <section class="py-16 bg-purple-50 dark:bg-gray-900 border-t border-purple-200 dark:border-gray-700">
+  <section class="py-16 bg-metallicgray border-t border-cyberblue/40">
     <div class="container mx-auto max-w-xl px-4">
-      <h2 class="text-2xl font-bold text-purple-800 dark:text-purple-300 mb-8 text-center">Metode Pembayaran</h2>
+      <h2 class="text-2xl font-semibold mb-8 text-neoncyan text-center">Metode Pembayaran</h2>
 
       <div class="grid gap-6">
-        <div class="bg-white dark:bg-gray-800 rounded-xl shadow-glow p-5 border-l-4 border-purple-500">
-          <h3 class="font-bold text-purple-700 dark:text-purple-300">QRIS</h3>
-          <p class="text-sm text-gray-700 dark:text-gray-300 mb-3">Scan kode QR di bawah ini untuk membayar:</p>
-          <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="QRIS Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-purple-500 rounded-xl">
+        <div class="bg-darkgray rounded-lg shadow-neon p-5 border-l-4 border-cyberblue">
+          <h3 class="font-semibold text-neoncyan">QRIS</h3>
+          <p class="text-cyberblue text-sm mb-3">Scan kode QR di bawah ini untuk membayar:</p>
+          <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="QRIS Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-cyberblue rounded-lg">
         </div>
 
-        <div class="bg-white dark:bg-gray-800 rounded-xl shadow-glow p-5 border-l-4 border-purple-500">
-          <h3 class="font-bold text-purple-700 dark:text-purple-300">DANA</h3>
-          <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="danaNomor">081269910013</span></p>
-          <button onclick="salinTeks('danaNomor')" class="mt-3 px-4 py-2 bg-purple-600 text-white rounded-full hover:bg-purple-700 text-sm">Salin</button>
+        <div class="bg-darkgray rounded-lg shadow-neon p-5 border-l-4 border-cyberblue">
+          <h3 class="font-semibold text-neoncyan">DANA</h3>
+          <p class="text-cyberblue">Nomor: <span id="danaNomor">081269910013</span></p>
+          <button onclick="salinTeks('danaNomor')" class="mt-3 px-4 py-2 bg-cyberblue text-darkgray rounded-md hover:bg-neoncyan text-sm transition">Salin</button>
         </div>
 
-        <div class="bg-white dark:bg-gray-800 rounded-xl shadow-glow p-5 border-l-4 border-purple-500">
-          <h3 class="font-bold text-purple-700 dark:text-purple-300">OVO</h3>
-          <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="ovoNomor">083839976528</span></p>
-          <button onclick="salinTeks('ovoNomor')" class="mt-3 px-4 py-2 bg-purple-600 text-white rounded-full hover:bg-purple-700 text-sm">Salin</button>
+        <div class="bg-darkgray rounded-lg shadow-neon p-5 border-l-4 border-cyberblue">
+          <h3 class="font-semibold text-neoncyan">OVO</h3>
+          <p class="text-cyberblue">Nomor: <span id="ovoNomor">083839976528</span></p>
+          <button onclick="salinTeks('ovoNomor')" class="mt-3 px-4 py-2 bg-cyberblue text-darkgray rounded-md hover:bg-neoncyan text-sm transition">Salin</button>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-purple-100 dark:bg-gray-800 text-center py-6 text-purple-700 dark:text-purple-300 font-medium">
+  <footer class="bg-metallicgray text-center py-6 text-cyberblue font-medium">
     <p>&copy; 2025 Rear OfficiaL. Solusi Hosting Terbaik Masa Kini.</p>
   </footer>
 
-  <!-- Script -->
   <script>
     let totalHarga = 0;
 
@@ -209,6 +214,5 @@
 
     window.onload = ubahForm;
   </script>
-
 </body>
-                                                                                                                                                  </html>
+            </html>
