--- a/Tokoku.html
+++ b/Tokoku.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="id" class="transition duration-300 scroll-smooth">
+<html lang="id" class="transition duration-300">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Harga & Pemesanan - Rear OfficiaL</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -10,116 +10,108 @@
       darkMode: 'class',
       theme: {
         extend: {
-          fontFamily: {
-            modern: ['Poppins', 'sans-serif']
-          },
           colors: {
-            cyberblue: '#0ff1fe',
-            darkgray: '#1a1a1a',
-            metallicgray: '#2e2e2e',
-            neoncyan: '#00fff7'
+            primary: {
+              DEFAULT: '#0f172a',
+              light: '#1e293b',
+              dark: '#0c1a2a'
+            },
+            accent: '#3b82f6'
           },
-          boxShadow: {
-            neon: '0 0 12px #0ff1fe, 0 0 24px #00fff7'
+          fontFamily: {
+            sans: ['Segoe UI', 'Roboto', 'Helvetica Neue', 'sans-serif']
           }
         }
       }
     }
   </script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
 </head>
-<body class="bg-darkgray text-cyberblue font-modern transition duration-300">
+<body class="bg-primary text-gray-100 dark:bg-black dark:text-gray-100 transition duration-300 font-sans">
 
   <!-- Header -->
-  <header class="bg-metallicgray text-cyberblue p-6 flex justify-between items-center shadow-neon">
+  <header class="bg-accent text-white p-6 flex justify-between items-center shadow-lg">
     <div>
-      <h1 class="text-3xl font-semibold tracking-wide">Rear OfficiaL</h1>
-      <p class="text-sm text-neoncyan">Website Pemesanan Hosting Rear OfficiaL</p>
+      <h1 class="text-2xl font-bold tracking-wide">Rear OfficiaL</h1>
+      <p class="text-sm">Website Pemesanan Hosting Rear OfficiaL</p>
     </div>
-    <button onclick="toggleDarkMode()" class="border border-cyberblue px-4 py-2 rounded-md hover:bg-cyberblue hover:text-darkgray transition">
+    <button onclick="toggleDarkMode()" class="bg-white text-accent px-3 py-1 rounded hover:bg-blue-100 text-sm dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600 transition">
       switch to gelap/terang
     </button>
   </header>
 
   <!-- Kalkulator Harga -->
-  <section class="py-16">
+  <section class="py-10">
     <div class="container mx-auto max-w-xl px-4">
-      <div class="bg-metallicgray p-6 rounded-lg shadow-neon border border-cyberblue/40 backdrop-blur-sm">
-        <h2 class="text-2xl font-semibold mb-6 text-neoncyan text-center">Produk Rear OfficiaL</h2>
+      <h2 class="text-xl font-semibold text-accent mb-4">Produk Rear OfficiaL</h2>
 
-        <label for="jenisLayanan" class="block mb-1">Pilih layanan:</label>
-        <select id="jenisLayanan" class="w-full p-3 border border-cyberblue rounded-md bg-darkgray text-cyberblue mb-4" onchange="ubahForm(); hitungHarga()">
-          <option value="pt">PT Panel - Rp25.000 (selamanya)</option>
-          <option value="admin">Admin Panel - Rp15.000 (selamanya)</option>
-          <option value="reseller">Reseller Panel - Rp7.000 (selamanya)</option>
-          <option value="wa">Bot WhatsApp - Rp1.000/hari</option>
-          <option value="ptero">Panel Pterodactyl - Rp1.000/GB</option>
-        </select>
+      <label for="jenisLayanan" class="block mb-1">Pilih layanan:</label>
+      <select id="jenisLayanan" class="w-full p-2 border rounded mb-4 bg-primary-light border-gray-600 text-white" onchange="ubahForm(); hitungHarga()">
+        <option value="pt">PT Panel - Rp25.000 (selamanya)</option>
+        <option value="admin">Admin Panel - Rp15.000 (selamanya)</option>
+        <option value="reseller">Reseller Panel - Rp7.000 (selamanya)</option>
+        <option value="wa">Bot WhatsApp - Rp1.000/hari</option>
+        <option value="ptero">Panel Pterodactyl - Rp1.000/GB</option>
+      </select>
 
-        <div id="durasiInput" class="mb-4 hidden">
-          <label for="durasi" class="block mb-1">Jumlah Hari:</label>
-          <input type="number" id="durasi" class="w-full p-3 border border-cyberblue rounded-md bg-darkgray text-cyberblue" oninput="hitungHarga()" />
-        </div>
-
-        <div id="gbInput" class="mb-4 hidden">
-          <label for="jumlahGB" class="block mb-1">Jumlah GB RAM:</label>
-          <input type="number" id="jumlahGB" class="w-full p-3 border border-cyberblue rounded-md bg-darkgray text-cyberblue" oninput="hitungHarga()" />
-        </div>
-
-        <p id="hasilHarga" class="mt-4 text-lg font-semibold text-neoncyan text-center"></p>
+      <div id="durasiInput" class="mb-4 hidden">
+        <label for="durasi" class="block mb-1">Jumlah Hari:</label>
+        <input type="number" id="durasi" class="w-full p-2 border rounded bg-primary-light border-gray-600 text-white" oninput="hitungHarga()" />
       </div>
+
+      <div id="gbInput" class="mb-4 hidden">
+        <label for="jumlahGB" class="block mb-1">Jumlah GB RAM:</label>
+        <input type="number" id="jumlahGB" class="w-full p-2 border rounded bg-primary-light border-gray-600 text-white" oninput="hitungHarga()" />
+      </div>
+
+      <p id="hasilHarga" class="mt-4 font-semibold text-accent"></p>
     </div>
   </section>
 
   <!-- Form Pemesanan -->
-  <section class="py-16 bg-darkgray border-t border-cyberblue/20">
+  <section class="py-10 bg-primary-light border-t border-gray-700">
     <div class="container mx-auto max-w-xl px-4">
-      <div class="bg-metallicgray p-6 rounded-lg shadow-neon border border-cyberblue/40">
-        <h2 class="text-2xl font-semibold mb-6 text-neoncyan text-center">Form Pemesanan</h2>
+      <h2 class="text-xl font-semibold text-accent mb-4">Form Pemesanan</h2>
 
-        <input id="nama" type="text" placeholder="Nama Lengkap" class="w-full p-3 border border-cyberblue rounded-md mb-4 bg-darkgray text-cyberblue placeholder-cyberblue" />
-        <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-3 border border-cyberblue rounded-md mb-4 bg-darkgray text-cyberblue placeholder-cyberblue" />
-        <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-3 border border-cyberblue rounded-md mb-6 bg-darkgray text-cyberblue placeholder-cyberblue"></textarea>
+      <input id="nama" type="text" placeholder="Nama Lengkap" class="w-full p-2 border rounded mb-3 bg-primary-light border-gray-600 text-white" />
+      <input id="email" type="email" placeholder="Email Aktif" class="w-full p-2 border rounded mb-3 bg-primary-light border-gray-600 text-white" />
+      <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-2 border rounded mb-3 bg-primary-light border-gray-600 text-white" />
+      <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-2 border rounded mb-4 bg-primary-light border-gray-600 text-white"></textarea>
 
-        <button onclick="kirimPesan()" class="w-full bg-cyberblue text-darkgray py-3 rounded-md font-semibold hover:bg-neoncyan transition">
-          Tekan Untuk Pesan Produk!
-        </button>
-      </div>
+      <button onclick="kirimPesan()" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">Tekan Untuk Pesan Produk!</button>
     </div>
   </section>
 
   <!-- Metode Pembayaran -->
-  <section class="py-16 bg-metallicgray border-t border-cyberblue/40">
+  <section class="py-10 bg-primary border-t border-gray-700">
     <div class="container mx-auto max-w-xl px-4">
-      <h2 class="text-2xl font-semibold mb-8 text-neoncyan text-center">Metode Pembayaran</h2>
+      <h2 class="text-xl font-semibold text-accent mb-4 text-center">Metode Pembayaran</h2>
 
-      <div class="grid gap-6">
-        <div class="bg-darkgray rounded-lg shadow-neon p-5 border-l-4 border-cyberblue">
-          <h3 class="font-semibold text-neoncyan">QRIS</h3>
-          <p class="text-cyberblue text-sm mb-3">Scan kode QR di bawah ini untuk membayar:</p>
-          <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="QRIS Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-cyberblue rounded-lg">
-        </div>
+      <div class="bg-primary-light rounded-lg shadow p-4 mb-4 border-l-4 border-blue-500">
+        <h3 class="font-bold text-accent">QRIS</h3>
+        <p class="text-sm text-gray-300 mb-2">Scan kode QR di bawah ini untuk membayar:</p>
+        <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="QRIS Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-blue-500 rounded">
+      </div>
 
-        <div class="bg-darkgray rounded-lg shadow-neon p-5 border-l-4 border-cyberblue">
-          <h3 class="font-semibold text-neoncyan">DANA</h3>
-          <p class="text-cyberblue">Nomor: <span id="danaNomor">081269910013</span></p>
-          <button onclick="salinTeks('danaNomor')" class="mt-3 px-4 py-2 bg-cyberblue text-darkgray rounded-md hover:bg-neoncyan text-sm transition">Salin</button>
-        </div>
+      <div class="bg-primary-light rounded-lg shadow p-4 mb-4 border-l-4 border-blue-500">
+        <h3 class="font-bold text-accent">DANA</h3>
+        <p class="text-gray-300">Nomor: <span id="danaNomor">081269910013</span></p>
+        <button onclick="salinTeks('danaNomor')" class="mt-2 px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">Salin</button>
+      </div>
 
-        <div class="bg-darkgray rounded-lg shadow-neon p-5 border-l-4 border-cyberblue">
-          <h3 class="font-semibold text-neoncyan">OVO</h3>
-          <p class="text-cyberblue">Nomor: <span id="ovoNomor">083839976528</span></p>
-          <button onclick="salinTeks('ovoNomor')" class="mt-3 px-4 py-2 bg-cyberblue text-darkgray rounded-md hover:bg-neoncyan text-sm transition">Salin</button>
-        </div>
+      <div class="bg-primary-light rounded-lg shadow p-4 border-l-4 border-blue-500">
+        <h3 class="font-bold text-accent">OVO</h3>
+        <p class="text-gray-300">Nomor: <span id="ovoNomor">083839976528</span></p>
+        <button onclick="salinTeks('ovoNomor')" class="mt-2 px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">Salin</button>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-metallicgray text-center py-6 text-cyberblue font-medium">
+  <footer class="bg-primary-light text-center py-4 text-accent">
     <p>&copy; 2025 Rear OfficiaL. Solusi Hosting Terbaik Masa Kini.</p>
   </footer>
 
+  <!-- Script -->
   <script>
     let totalHarga = 0;
 
@@ -138,10 +130,8 @@
 
       if (jenis === 'wa') {
         document.getElementById('durasiInput').classList.remove('hidden');
-        document.getElementById('durasi').focus();
       } else if (jenis === 'ptero') {
         document.getElementById('gbInput').classList.remove('hidden');
-        document.getElementById('jumlahGB').focus();
       }
     }
 
@@ -181,17 +171,19 @@
 
     function kirimPesan() {
       const nama = document.getElementById('nama').value.trim();
+      const email = document.getElementById('email').value.trim();
       const waUser = document.getElementById('wa').value.trim();
       const catatan = document.getElementById('catatan').value.trim();
       const layanan = document.getElementById('jenisLayanan').selectedOptions[0].text;
 
-      if (!nama || !waUser || totalHarga === 0) {
+      if (!nama || !email || !waUser || totalHarga === 0) {
         alert("Lengkapi semua data dan hitung harga terlebih dahulu.");
         return;
       }
 
       const pesan = `Halo Rear OfficiaL, saya ingin memesan layanan:%0A
 - Nama: ${nama}%0A
+- Email: ${email}%0A
 - WhatsApp: ${waUser}%0A
 - Layanan: ${layanan}%0A
 - Total Harga: ${formatRupiah(totalHarga)}%0A
@@ -214,5 +206,6 @@
 
     window.onload = ubahForm;
   </script>
+
 </body>
-            </html>
+</html>
