--- a/Tokoku.html
+++ b/Tokoku.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="id" class="transition duration-300">
+<html lang="id" x-data="{ darkMode: false, layanan: 'pt', hari: 0, gb: 0 }" :class="darkMode ? 'dark' : ''">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Harga & Pemesanan - Rear OfficiaL</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/alpinejs" defer></script>
   <script>
     tailwind.config = {
       darkMode: 'class',
       theme: {
         extend: {
           colors: {
-            primary: '#0a2540', // biru tua
+            primary: '#0a2540',
             'primary-light': '#1e3a5f',
           },
           fontFamily: {
@@ -19,10 +20,10 @@
           }
         }
       }
-    }
+    };
   </script>
 </head>
-<body class="bg-white text-gray-900 dark:bg-primary dark:text-gray-100 transition duration-300 font-sans">
+<body class="bg-white text-gray-900 dark:bg-primary dark:text-gray-100 font-sans transition duration-300">
 
   <!-- Header -->
   <header class="bg-primary text-white p-6 flex justify-between items-center">
@@ -30,18 +31,18 @@
       <h1 class="text-2xl font-bold">Rear OfficiaL</h1>
       <p class="text-sm">Website Pemesanan Hosting Rear OfficiaL</p>
     </div>
-    <button onclick="toggleDarkMode()" class="bg-white text-primary px-3 py-1 rounded hover:bg-blue-100 text-sm dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600">
-      switch to gelap/terang
+    <button @click="darkMode = !darkMode" class="bg-white text-primary px-3 py-1 rounded hover:bg-blue-100 text-sm dark:bg-gray-700 dark:text-white dark:hover:bg-gray-600">
+      Toggle Tema
     </button>
   </header>
 
   <!-- Kalkulator Harga -->
   <section class="py-10">
-    <div class="container mx-auto max-w-xl px-4">
-      <h2 class="text-xl font-semibold text-primary mb-4">Produk Rear OfficiaL</h2>
+    <div class="max-w-xl mx-auto px-4">
+      <h2 class="text-xl font-semibold text-primary mb-4 dark:text-blue-200">Produk Rear OfficiaL</h2>
 
-      <label for="jenisLayanan" class="block mb-1">Pilih layanan:</label>
-      <select id="jenisLayanan" class="w-full p-2 border rounded mb-4 dark:bg-primary-light dark:border-gray-600 dark:text-white" onchange="ubahForm(); hitungHarga()">
+      <label class="block mb-1">Pilih layanan:</label>
+      <select x-model="layanan" @change="hari = 0; gb = 0" class="w-full p-2 border rounded mb-4 dark:bg-primary-light dark:border-gray-600 dark:text-white">
         <option value="pt">PT Panel - Rp25.000 (selamanya)</option>
         <option value="admin">Admin Panel - Rp15.000 (selamanya)</option>
         <option value="reseller">Reseller Panel - Rp7.000 (selamanya)</option>
@@ -49,54 +50,90 @@
         <option value="ptero">Panel Pterodactyl - Rp1.000/GB</option>
       </select>
 
-      <div id="durasiInput" class="mb-4 hidden">
-        <label for="durasi" class="block mb-1">Jumlah Hari:</label>
-        <input type="number" id="durasi" class="w-full p-2 border rounded dark:bg-primary-light dark:border-gray-600 dark:text-white" oninput="hitungHarga()" />
+      <!-- Input Hari -->
+      <div x-show="layanan === 'wa'" class="mb-4 transition-all">
+        <label class="block mb-1">Jumlah Hari:</label>
+        <input type="number" x-model="hari" min="1" class="w-full p-2 border rounded dark:bg-primary-light dark:border-gray-600 dark:text-white" />
       </div>
 
-      <div id="gbInput" class="mb-4 hidden">
-        <label for="jumlahGB" class="block mb-1">Jumlah GB RAM:</label>
-        <input type="number" id="jumlahGB" class="w-full p-2 border rounded dark:bg-primary-light dark:border-gray-600 dark:text-white" oninput="hitungHarga()" />
+      <!-- Input GB -->
+      <div x-show="layanan === 'ptero'" class="mb-4 transition-all">
+        <label class="block mb-1">Jumlah GB RAM:</label>
+        <input type="number" x-model="gb" min="1" class="w-full p-2 border rounded dark:bg-primary-light dark:border-gray-600 dark:text-white" />
       </div>
 
-      <p id="hasilHarga" class="mt-4 font-semibold text-primary dark:text-blue-200"></p>
+      <template x-if="layanan === 'pt' || layanan === 'admin' || layanan === 'reseller' || (layanan === 'wa' && hari >= 1) || (layanan === 'ptero' && gb >= 1)">
+        <p class="mt-4 font-semibold text-primary dark:text-blue-200">
+          Total:
+          <span x-text="layanan === 'pt' ? 'Rp25.000' :
+                         layanan === 'admin' ? 'Rp15.000' :
+                         layanan === 'reseller' ? 'Rp7.000' :
+                         layanan === 'wa' ? 'Rp' + (hari * 1000).toLocaleString('id-ID') :
+                         'Rp' + (gb * 1000).toLocaleString('id-ID')">
+          </span>
+        </p>
+      </template>
     </div>
   </section>
 
   <!-- Form Pemesanan -->
   <section class="py-10 bg-white dark:bg-primary-light border-t dark:border-gray-600">
-    <div class="container mx-auto max-w-xl px-4">
-      <h2 class="text-xl font-semibold text-primary mb-4">Form Pemesanan</h2>
+    <div class="max-w-xl mx-auto px-4" x-data="{ nama: '', wa: '', catatan: '' }">
+      <h2 class="text-xl font-semibold text-primary mb-4 dark:text-blue-200">Form Pemesanan</h2>
 
-      <input id="nama" type="text" placeholder="Username" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
-      <input id="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
-      <textarea id="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-2 border rounded mb-4 dark:bg-primary-light dark:border-gray-600 dark:text-white"></textarea>
+      <input x-model="nama" type="text" placeholder="Username" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
+      <input x-model="wa" type="text" placeholder="Nomor WhatsApp Anda" class="w-full p-2 border rounded mb-3 dark:bg-primary-light dark:border-gray-600 dark:text-white" />
+      <textarea x-model="catatan" placeholder="Catatan tambahan (opsional)" class="w-full p-2 border rounded mb-4 dark:bg-primary-light dark:border-gray-600 dark:text-white"></textarea>
 
-      <button onclick="kirimPesan()" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">Tekan Untuk Pesan Produk!</button>
+      <button @click="
+        if (!nama || !wa || (layanan === 'wa' && hari < 1) || (layanan === 'ptero' && gb < 1)) {
+          alert('Lengkapi data dan pastikan jumlah valid.');
+        } else {
+          const total = layanan === 'pt' ? 25000 :
+                        layanan === 'admin' ? 15000 :
+                        layanan === 'reseller' ? 7000 :
+                        layanan === 'wa' ? hari * 1000 :
+                        gb * 1000;
+
+          const text = `Halo Rear OfficiaL, saya ingin memesan layanan:%0A- Nama: ${nama}%0A- WhatsApp: ${wa}%0A- Layanan: ${layanan}%0A- Total Harga: Rp${total.toLocaleString('id-ID')}%0A- Catatan: ${catatan || '-'}%0A`;
+          window.open(`https://wa.me/6283839976528?text=${text}`, '_blank');
+        }"
+        class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700">
+        Tekan Untuk Pesan Produk!
+      </button>
     </div>
   </section>
 
   <!-- Metode Pembayaran -->
   <section class="py-10 bg-blue-50 dark:bg-primary border-t border-blue-200 dark:border-gray-700">
-    <div class="container mx-auto max-w-xl px-4">
-      <h2 class="text-xl font-semibold text-primary mb-4 text-center">Metode Pembayaran</h2>
+    <div class="max-w-xl mx-auto px-4 space-y-6">
+      <h2 class="text-xl font-semibold text-primary dark:text-blue-200 text-center">Metode Pembayaran</h2>
 
-      <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 mb-4 border-l-4 border-blue-500">
+      <!-- QRIS -->
+      <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 border-l-4 border-blue-500">
         <h3 class="font-bold text-primary dark:text-blue-200">QRIS</h3>
-        <p class="text-sm text-gray-700 dark:text-gray-300 mb-2">Scan kode QR di bawah ini untuk membayar:</p>
-        <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="QRIS Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-blue-500 rounded">
+        <p class="text-sm text-gray-700 dark:text-gray-300">Scan kode QR di bawah ini:</p>
+        <img src="https://img1.pixhost.to/images/5718/598086344_rulzz-official.jpg" alt="QRIS Rear OfficiaL" class="w-full max-w-xs mx-auto border-4 border-blue-500 rounded mt-2">
       </div>
 
-      <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 mb-4 border-l-4 border-blue-500">
+      <!-- DANA -->
+      <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 border-l-4 border-blue-500">
         <h3 class="font-bold text-primary dark:text-blue-200">DANA</h3>
         <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="danaNomor">081269910013</span></p>
-        <button onclick="salinTeks('danaNomor')" class="mt-2 px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">Salin</button>
+        <button onclick="navigator.clipboard.writeText('081269910013'); alert('Nomor disalin!');"
+                class="mt-2 px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">
+          Salin
+        </button>
       </div>
 
+      <!-- OVO -->
       <div class="bg-white dark:bg-primary-light rounded-lg shadow p-4 border-l-4 border-blue-500">
         <h3 class="font-bold text-primary dark:text-blue-200">OVO</h3>
         <p class="text-gray-700 dark:text-gray-300">Nomor: <span id="ovoNomor">083839976528</span></p>
-        <button onclick="salinTeks('ovoNomor')" class="mt-2 px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">Salin</button>
+        <button onclick="navigator.clipboard.writeText('083839976528'); alert('Nomor disalin!');"
+                class="mt-2 px-3 py-1 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm">
+          Salin
+        </button>
       </div>
     </div>
   </section>
@@ -105,100 +142,5 @@
   <footer class="bg-blue-100 dark:bg-primary text-center py-4 text-primary dark:text-blue-200">
     <p>&copy; 2025 Rear OfficiaL. Solusi Hosting Terbaik Masa Kini.</p>
   </footer>
-
-  <!-- Script -->
-  <script>
-    let totalHarga = 0;
-
-    function toggleDarkMode() {
-      document.documentElement.classList.toggle('dark');
-    }
-
-    function ubahForm() {
-      const jenis = document.getElementById('jenisLayanan').value;
-      document.getElementById('durasiInput').classList.add('hidden');
-      document.getElementById('gbInput').classList.add('hidden');
-      document.getElementById('durasi').value = '';
-      document.getElementById('jumlahGB').value = '';
-      document.getElementById('hasilHarga').innerText = '';
-      totalHarga = 0;
-
-      if (jenis === 'wa') {
-        document.getElementById('durasiInput').classList.remove('hidden');
-      } else if (jenis === 'ptero') {
-        document.getElementById('gbInput').classList.remove('hidden');
-      }
-    }
-
-    function formatRupiah(angka) {
-      return `Rp${angka.toLocaleString('id-ID')}`;
-    }
-
-    function hitungHarga() {
-      const jenis = document.getElementById('jenisLayanan').value;
-      const hari = parseInt(document.getElementById('durasi').value);
-      const gb = parseInt(document.getElementById('jumlahGB').value);
-
-      switch (jenis) {
-        case 'pt': totalHarga = 25000; break;
-        case 'admin': totalHarga = 15000; break;
-        case 'reseller': totalHarga = 7000; break;
-        case 'wa':
-          if (isNaN(hari) || hari <= 0) {
-            totalHarga = 0;
-            document.getElementById('hasilHarga').innerText = '';
-            return;
-          }
-          totalHarga = hari * 1000;
-          break;
-        case 'ptero':
-          if (isNaN(gb) || gb <= 0) {
-            totalHarga = 0;
-            document.getElementById('hasilHarga').innerText = '';
-            return;
-          }
-          totalHarga = gb * 1000;
-          break;
-      }
-
-      document.getElementById('hasilHarga').innerText = `Total: ${formatRupiah(totalHarga)}`;
-    }
-
-    function kirimPesan() {
-      const nama = document.getElementById('nama').value.trim();
-      const waUser = document.getElementById('wa').value.trim();
-      const catatan = document.getElementById('catatan').value.trim();
-      const layanan = document.getElementById('jenisLayanan').selectedOptions[0].text;
-
-      if (!nama || !waUser || totalHarga === 0) {
-        alert("Lengkapi semua data dan hitung harga terlebih dahulu.");
-        return;
-      }
-
-      const pesan = `Halo Rear OfficiaL, saya ingin memesan layanan:%0A
-- Nama: ${nama}%0A
-- WhatsApp: ${waUser}%0A
-- Layanan: ${layanan}%0A
-- Total Harga: ${formatRupiah(totalHarga)}%0A
-- Catatan: ${catatan || '-'}%0A
-%0AMohon konfirmasinya, terima kasih!`;
-
-      const nomorTujuan = "6283839976528";
-      const link = `https://wa.me/${nomorTujuan}?text=${pesan}`;
-      window.open(link, '_blank');
-    }
-
-    function salinTeks(id) {
-      const teks = document.getElementById(id).innerText;
-      navigator.clipboard.writeText(teks).then(() => {
-        alert(`Teks "${teks}" berhasil disalin.`);
-      }).catch(() => {
-        alert("Gagal menyalin teks.");
-      });
-    }
-
-    window.onload = ubahForm;
-  </script>
-
 </body>
 </html>
